--- a/styles.css
+++ b/styles.css
@@ -64,8 +64,9 @@ body {
   /* animation: rotate360 37s infinite; */
 }
 .cards {
+  max-width: 100%;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(31.1rem, 1fr));
 }
 .cards > * {
   padding: 4rem;
@@ -185,5 +186,59 @@ body {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media all and (max-width: 40.3125em) {
+  body {
+    display: block;
+    min-height: initial;
+    padding: 7.2rem 3.2rem;
+  }
+
+  .cards > * {
+    padding: 2.8rem 2.4rem 3.2rem 2.4rem;
+    text-align: center;
+  }
+
+  .cards__header {
+    font-size: 2rem;
+    line-height: 2.3rem;
+    letter-spacing: -0.25px;
+  }
+  .cards__sub-header {
+    margin-bottom: 1.6rem;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    letter-spacing: -0.1875px;
+  }
+  .cards__description {
+    font-size: 1.4rem;
+    letter-spacing: -0.2175x;
+  }
+  .cards__price {
+    justify-content: center;
+  }
+
+  .cards__reasons-list {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 2rem;
+    letter-spacing: -0.175px;
+    color: rgba(255, 255, 255, 0.75);
+  }
+}
+
+@media all and (max-width: 23.4375em) {
+  .cards {
+    display: flex;
+    flex-direction: column;
+  }
+  .cards > * {
+    padding: 2.8rem 2.4rem 3.2rem 2.4rem;
+    text-align: initial;
+  }
+  .cards__price {
+    justify-content: flex-start;
   }
 }
